# kuwahara_filter

./: CMakeLists.txt  kuwahara_filter.cpp  out11.tif  out13.tif  out15.tif  out5.tif  out7.tif  out9.tif
sample images/: limes.tif  limes_kuwahara11x11.tif  limes_kuwahara13x13.tif  limes_kuwahara15x15.tif  limes_kuwahara5x5.tif  limes_kuwahara7x7.tif  limes_kuwahara9x9.tif
